# libbndl

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  appveyor.yml
.github/workflows/: main.yml
include/libbndl/: bundle.hpp
src/: CMakeLists.txt  bundle.cpp  lock.hpp  util.hpp
tools/: CMakeLists.txt
tools/bndl_edit/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
tools/bndl_util/: CMakeLists.txt  main.cpp
